[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/SpaceMono-BoldItalic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/roundedRect.png" type="Texture" id=2]
[ext_resource path="res://assets/sound-dial.png" type="Texture" id=3]
[ext_resource path="res://assets/settings-btn.png" type="Texture" id=4]
[ext_resource path="res://assets/music-dial.png" type="Texture" id=5]
[ext_resource path="res://assets/unpauseBtn.png" type="Texture" id=6]
[ext_resource path="res://assets/credits-btn.png" type="Texture" id=7]
[ext_resource path="res://src/prefabs/PauseMenu.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=7]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Node2D"]
position = Vector2( 512, 230 )
z_index = 120
script = ExtResource( 8 )

[node name="bigBG" type="NinePatchRect" parent="."]
self_modulate = Color( 0, 0, 0, 0.513726 )
margin_left = -594.0
margin_top = -286.0
margin_right = 611.0
margin_bottom = 380.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 240, 240 )
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pausemenu" type="NinePatchRect" parent="."]
self_modulate = Color( 0, 0, 0, 0.733333 )
margin_left = -154.0
margin_top = -44.0
margin_right = 151.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 372, -113 )
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 240, 240 )
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paused" type="RichTextLabel" parent="pausemenu"]
margin_left = -17.0
margin_top = 29.0
margin_right = 327.0
margin_bottom = 83.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]paused[/center]"
text = "paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="pausemenu/paused"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="pausemenu/paused"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="buttons" type="Node2D" parent="pausemenu"]
position = Vector2( 154, 73 )

[node name="credits" type="TextureButton" parent="pausemenu/buttons"]
margin_left = -100.0
margin_top = 24.0
margin_bottom = 74.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playBtn" type="TextureButton" parent="pausemenu/buttons"]
margin_left = -20.0
margin_top = 24.0
margin_right = 30.0
margin_bottom = 74.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="TextureButton" parent="pausemenu/buttons"]
margin_left = 60.0
margin_top = 24.0
margin_right = 110.0
margin_bottom = 74.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="Node2D" parent="."]
visible = false
position = Vector2( 552, 41 )

[node name="bg3" type="NinePatchRect" parent="settings"]
self_modulate = Color( 0, 0, 0, 0.733333 )
margin_left = -394.0
margin_top = -85.0
margin_right = -203.0
margin_bottom = 135.0
rect_pivot_offset = Vector2( 372, -113 )
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 240, 240 )
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="RichTextLabel" parent="settings"]
margin_left = -393.0
margin_top = -66.0
margin_right = -205.0
margin_bottom = -16.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]settings[/center]"
text = "settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="settings/settings"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="settings/settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="sound-slider" type="HSlider" parent="settings"]
margin_left = -370.0
margin_top = -6.0
margin_right = -163.0
margin_bottom = 62.0
rect_scale = Vector2( 0.7, 0.7 )
custom_icons/grabber_disabled = ExtResource( 3 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
min_value = -24.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music-slider" type="HSlider" parent="settings"]
margin_left = -370.0
margin_top = 44.0
margin_right = -163.0
margin_bottom = 112.0
rect_scale = Vector2( 0.7, 0.7 )
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/grabber_area = SubResource( 7 )
min_value = -24.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Node2D" parent="."]
visible = false
position = Vector2( 44, 41 )

[node name="bg3" type="NinePatchRect" parent="credits"]
self_modulate = Color( 0, 0, 0, 0.733333 )
margin_left = -394.0
margin_top = -87.0
margin_right = -203.0
margin_bottom = 163.0
rect_pivot_offset = Vector2( 372, -113 )
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 240, 240 )
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg4" type="NinePatchRect" parent="credits"]
self_modulate = Color( 0, 0, 0, 0.733333 )
margin_left = -394.0
margin_top = -87.0
margin_right = -203.0
margin_bottom = 163.0
rect_pivot_offset = Vector2( 372, -113 )
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 240, 240 )
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits-title" type="RichTextLabel" parent="credits"]
margin_left = -393.0
margin_top = -66.0
margin_right = -205.0
margin_bottom = -16.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]credits[/center]"
text = "credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="credits/credits-title"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="credits/credits-title"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="credits1" type="RichTextLabel" parent="credits"]
self_modulate = Color( 0.717647, 0.717647, 0.717647, 1 )
margin_left = -380.0
margin_top = -20.0
margin_right = -239.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 31, 39 )
custom_constants/line_separation = -5
custom_fonts/normal_font = SubResource( 6 )
text = "programming
design
sounds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="credits/credits1"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="credits/credits1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="credits3" type="RichTextLabel" parent="credits"]
self_modulate = Color( 0.717647, 0.717647, 0.717647, 1 )
margin_left = -380.0
margin_top = 77.0
margin_right = -309.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 31, 39 )
custom_constants/line_separation = -5
custom_fonts/normal_font = SubResource( 6 )
text = "design"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="credits/credits3"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="credits/credits3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="credits-taylor" type="RichTextLabel" parent="credits"]
margin_left = -381.0
margin_top = 39.0
margin_right = -209.0
margin_bottom = 67.0
custom_fonts/normal_font = SubResource( 6 )
text = "taylor anderson"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="credits/credits-taylor"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="credits/credits-taylor"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[node name="credits-colin" type="RichTextLabel" parent="credits"]
margin_left = -381.0
margin_top = 98.0
margin_right = -209.0
margin_bottom = 126.0
custom_fonts/normal_font = SubResource( 6 )
text = "colin zarzour"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VScrollBar2" type="VScrollBar" parent="credits/credits-colin"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
max_value = 61.0
step = 1.0
page = 76.0

[node name="VScrollBar3" type="VScrollBar" parent="credits/credits-colin"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
step = 1.0

[connection signal="pressed" from="pausemenu/buttons/credits" to="." method="onCreditsPressed"]
[connection signal="pressed" from="pausemenu/buttons/playBtn" to="." method="onPlayBtnPressed"]
[connection signal="pressed" from="pausemenu/buttons/settings" to="." method="onSettingsPressed"]
[connection signal="value_changed" from="settings/sound-slider" to="." method="onSoundSliderValueChange"]
